Trying to modify the product alerts ts and html as well as product-list html to fix website

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -16,8 +16,7 @@
   </button>
 
   <app-product-alerts
-    [product]="product"
-    (notify)="onNotify()">
+    [product]="product">
   </app-product-alerts>
 </div>
 
